syntax = "proto3";
package header;

enum ApiKey{
    produce = 0;
    consume = 1;
}

enum ApiVersion{
     V0 = 0;
}

enum ApiType{
    Request = 0;
    Response = 1;
}

enum ErrorCode{
    Success = 0;
}

message RequestCommon{
    uint32 correlation_id = 1;
    string client_id = 2;
}

message ResponseCommon{
    uint32 correlation_id = 1;
}

message Header{
    ApiKey api_key = 1;
    ApiType api_type = 2;
    ApiVersion api_version = 3;
    RequestCommon request = 4;
    ResponseCommon response = 5;
}