syntax = "proto3";
package storage;

enum ApiKey{
    produce = 0;
    consume = 1;
}

enum ApiVersion{
     V0 = 0;
}

enum ErrorCode{
    Success = 0;
}

message RequestHeader{
    ApiKey request_api_key = 1;
    ApiVersion request_api_version = 2;
    uint32 correlation_id = 3;
    string client_id = 4;
    bytes tagged_fields = 5;
}

message ResponseHeader{
    uint32 correlation_id = 1;
    bytes tagged_fields = 2;
}


message TopicData{
    string name = 1;
    PartitionData partition_data = 2;
}

message PartitionData{

}

message ProduceReuest{
    RequestHeader header = 1;
    ProduceBody body = 2;
}

message ProduceBody{
    uint32 transactional_id = 1;
    uint32 acks = 2;
    uint32 timeout_ms = 3;
    TopicData topic_data =4;
}

message ProduceResponse{
    
}